# csv-encoder

./: README.md  pyproject.toml
csv_tool/: filter_engine.py  models.py  reader.py
docs/: ADR-0001.md  ADR-0002.md  ADR-0003.md
tests/data/: test_reader.csv
